--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <button class="go-beta">Go Beta!</button>
-        <button class="close-app">Close App</button>
+        <button id="close-app">Close App</button>
     </div>
 </body>
 </html>
