--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <div class="page">
         <div class="welcome">
             <div class="welcome-to">Welcome to</div>
