--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+
+<div class="mask">
+    <div class="loader"></div>
+</div>
+
+<meta name="viewport" content="width=device-width, user-scalable=no">
     <div class="page">
         <div class="welcome">
             <div class="welcome-to">Welcome to</div>
