--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="beta-box">Beta</div>
 
         <div class="member">
-            <img src="member.svg"></img>
+            <object data="member.svg" type="image/svg+xml"></object>
         </div>
 
         <button class="go-beta">Go Beta!</button>
