--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
             <div class="form-desc">What should I call you?</div>
         </div>
 
-        <input class="nickname" placeholder="Nickname">
+        <input class="nickname" placeholder="Nickname" value="">
 
         <div class="form-member">
             <object data="form-member.svg" type="image/svg+xml"></object>
